// Original file: src/protos/3/estate.proto


export interface Update {
  'id'?: (string);
  'estateName'?: (string);
  'estateCode'?: (string);
  'countryId'?: (string);
}

export interface Update__Output {
  'id': (string);
  'estateName': (string);
  'estateCode': (string);
  'countryId': (string);
}
