// Original file: src/protos/3/estate.proto


export interface Estate {
  'id'?: (string);
  'estateName'?: (string);
  'estateCode'?: (string);
  'countryId'?: (string);
}

export interface Estate__Output {
  'id': (string);
  'estateName': (string);
  'estateCode': (string);
  'countryId': (string);
}
